--- a/style.css
+++ b/style.css
@@ -69,3 +69,9 @@ p {
   background-color:transparent;
   color: #871f1f;
 }
+#break2 {
+  background-image:url("image_assets/bg3.jpg");
+  height: 300px;
+  background-size: cover;
+  background-attachment: fixed;
+}
